--- a/themes/gillion-child/style.css
+++ b/themes/gillion-child/style.css
@@ -7,6 +7,10 @@ Template: gillion
 */
 
 /* Add your custom CSS below */
+h1, h2, h3, h4, h5, h6{ 
+	margin: 32px 0 8px 0;
+}
+
 .MicroServiceContainer{
 	width: 100%;
 }
